// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders error when currentStatus is error 1`] = `
<p
  data-testid="kvpair-status-only"
>
   
  <span
    className="awsui_root_1cbgc_azp03_153 awsui_status-error_1cbgc_azp03_162"
  >
    <span
      className="awsui_container_1cbgc_azp03_131 awsui_display-inline-block_1cbgc_azp03_210"
    >
      <span
        className="awsui_icon_1cbgc_azp03_103"
      >
        <span
          className="awsui_icon_h11ix_7yf34_104 awsui_size-normal-mapped-height_h11ix_7yf34_158 awsui_size-normal_h11ix_7yf34_154 awsui_variant-normal_h11ix_7yf34_230"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" focusable=\\"false\\" aria-hidden=\\"true\\"><circle class=\\"stroke-linejoin-round\\" cx=\\"8\\" cy=\\"8\\" r=\\"7\\"/><path d=\\"m10.828 5.172-5.656 5.656M10.828 10.828 5.172 5.172\\"/></svg>",
            }
          }
          style={Object {}}
        />
      </span>
      An error occurred loading key-value pairs.
    </span>
  </span>
   
</p>
`;

exports[`Renders key-value pairs 1`] = `
<div>
  <Box
    display="inline"
    variant="h3"
  >
    Key-Value Pairs: 
    2
     Found
  </Box>
  <ul
    data-testid="key-value-pairs-data"
  >
    <ExpandableSection
      headerText="Page 1"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <h5>
          first name
        </h5>
        <p>
          fake-name
           
        </p>
      </div>
    </ExpandableSection>
    <ExpandableSection
      headerText="Page 2"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <h5>
          last name
        </h5>
        <p>
          fake-last-name
           
        </p>
      </div>
    </ExpandableSection>
  </ul>
</div>
`;

exports[`Renders key-value pairs with count and page separation 1`] = `
<div>
  <Box
    display="inline"
    variant="h3"
  >
    Key-Value Pairs: 
    2
     Found
  </Box>
  <ul
    data-testid="key-value-pairs-data"
  >
    <ExpandableSection
      headerText="Page 1"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <h5>
          first name
        </h5>
        <p>
          fake-name
           
        </p>
      </div>
    </ExpandableSection>
    <ExpandableSection
      headerText="Page 2"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <h5>
          last name
        </h5>
        <p>
          fake-last-name
           
        </p>
      </div>
    </ExpandableSection>
  </ul>
</div>
`;

exports[`Renders loading when currentStatus is loading 1`] = `
<p
  data-testid="kvpair-status-only"
>
   
  <span
    className="awsui_root_1cbgc_azp03_153 awsui_status-loading_1cbgc_azp03_183"
  >
    <span
      className="awsui_container_1cbgc_azp03_131 awsui_display-inline-block_1cbgc_azp03_210"
    >
      <span
        className="awsui_icon_1cbgc_azp03_103"
      >
        <span
          className="awsui_root_1612d_kn9gt_133 awsui_size-normal_1612d_kn9gt_147 awsui_variant-normal_1612d_kn9gt_171"
        >
          <span
            className="awsui_circle_1612d_kn9gt_189 awsui_circle-left_1612d_kn9gt_217"
          />
          <span
            className="awsui_circle_1612d_kn9gt_189 awsui_circle-right_1612d_kn9gt_222"
          />
        </span>
      </span>
      Loading
    </span>
  </span>
   
</p>
`;

exports[`Renders without key-value pairs 1`] = `
<p
  data-testid="kv-pair-nodata"
>
  No Key-Value Pairs detected
</p>
`;
